--- a/trunk/workspace/MeshStreamingClient_iOS/MeshStreamingClient_iOS/en.lproj/MainStoryboard.storyboard
+++ b/trunk/workspace/MeshStreamingClient_iOS/MeshStreamingClient_iOS/en.lproj/MainStoryboard.storyboard
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2843" systemVersion="12C60" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="8wR-aP-qTG">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1929"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--View Controller - ModelView-->
         <scene sceneID="4">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5" customClass="GLKView">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <rect key="frame" x="0.0" y="20" width="768" height="955"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="IP" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bEM-bX-ASz">
@@ -106,6 +106,7 @@
                             <constraint firstItem="ygF-Vr-0vL" firstAttribute="top" secondItem="5" secondAttribute="top" constant="87" id="yxd-r1-Wfg"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="ModelView" id="xyc-Bp-UJM"/>
                     <connections>
                         <outlet property="detailRecoverProgress" destination="S9h-Ta-qQu" id="NnT-eV-Hch"/>
                         <outlet property="host" destination="AQo-ux-Zbb" id="ao5-hV-UoE"/>
@@ -115,11 +116,114 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="372" y="-11"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="n3E-9I-ESU">
+            <objects>
+                <tabBarController definesPresentationContext="YES" id="8wR-aP-qTG" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="8dc-6B-G5m">
+                        <rect key="frame" x="129" y="330" width="163" height="49"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="2" kind="relationship" relationship="viewControllers" id="H2P-hw-60f"/>
+                        <segue destination="HzC-RB-zaJ" kind="relationship" relationship="viewControllers" id="Xiu-pU-dwq"/>
+                        <segue destination="iKS-Yy-uUn" kind="relationship" relationship="viewControllers" id="cPO-CQ-OmW"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jej-8b-0KV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-953" y="700"/>
+        </scene>
+        <!--View Controller - Model-->
+        <scene sceneID="987-Zy-pba">
+            <objects>
+                <viewController id="HzC-RB-zaJ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="F1Q-ZN-VJJ">
+                        <rect key="frame" x="0.0" y="20" width="768" height="955"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Model" id="dTJ-dw-cxY"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UVX-K5-SNm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="372" y="1306"/>
+        </scene>
+        <!--Setting Table View Controller - Settings-->
+        <scene sceneID="FMq-5m-wUI">
+            <objects>
+                <viewController id="iKS-Yy-uUn" customClass="SettingTableViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rPm-Up-fap">
+                        <rect key="frame" x="0.0" y="20" width="768" height="955"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Server IP" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OOk-or-q3g">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="zw9-V0-h1Y"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Server Port" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="shM-bH-yHU">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="IuR-1X-DMh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gWh-bS-NjI">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="327" id="XKn-EJ-sLC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5t6-I2-05a">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                            <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="EDR-g7-eZd">
+                                <items>
+                                    <navigationItem title="Settings" id="TtE-dp-9jd"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="EDR-g7-eZd" firstAttribute="top" secondItem="rPm-Up-fap" secondAttribute="top" type="default" id="6Wt-NA-r8a"/>
+                            <constraint firstItem="gWh-bS-NjI" firstAttribute="centerY" secondItem="OOk-or-q3g" secondAttribute="centerY" type="default" id="AAR-i3-Gbr"/>
+                            <constraint firstItem="5t6-I2-05a" firstAttribute="top" secondItem="rPm-Up-fap" secondAttribute="top" constant="141" id="BBF-Ee-dPn"/>
+                            <constraint firstItem="shM-bH-yHU" firstAttribute="leading" secondItem="OOk-or-q3g" secondAttribute="leading" type="default" id="Dt6-24-mX9"/>
+                            <constraint firstItem="OOk-or-q3g" firstAttribute="leading" secondItem="rPm-Up-fap" secondAttribute="leading" constant="79" id="DyN-Y6-oND"/>
+                            <constraint firstItem="OOk-or-q3g" firstAttribute="top" secondItem="rPm-Up-fap" secondAttribute="top" constant="75" id="HLo-5e-Su8"/>
+                            <constraint firstItem="EDR-g7-eZd" firstAttribute="trailing" secondItem="rPm-Up-fap" secondAttribute="trailing" type="default" id="Oke-o4-RQY"/>
+                            <constraint firstItem="gWh-bS-NjI" firstAttribute="baseline" secondItem="OOk-or-q3g" secondAttribute="baseline" type="default" id="X19-zC-8Db"/>
+                            <constraint firstItem="5t6-I2-05a" firstAttribute="trailing" secondItem="gWh-bS-NjI" secondAttribute="trailing" type="default" id="iE7-0B-xRu"/>
+                            <constraint firstItem="5t6-I2-05a" firstAttribute="leading" secondItem="gWh-bS-NjI" secondAttribute="leading" type="default" id="jRl-oj-2OO"/>
+                            <constraint firstItem="gWh-bS-NjI" firstAttribute="leading" secondItem="rPm-Up-fap" secondAttribute="leading" constant="344" id="rud-Go-ytA"/>
+                            <constraint firstItem="shM-bH-yHU" firstAttribute="top" secondItem="rPm-Up-fap" secondAttribute="top" constant="137" id="sXS-bx-v2V"/>
+                            <constraint firstItem="EDR-g7-eZd" firstAttribute="leading" secondItem="rPm-Up-fap" secondAttribute="leading" type="default" id="v7B-L2-Bq3"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Settings" id="HJh-Bd-vkr"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SQq-rU-HSs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="484" y="2539"/>
         </scene>
     </scenes>
     <classes>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="SettingTableViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SettingTableViewController.h"/>
         </class>
         <class className="ViewController" superclassName="GLKViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
