finish server mesh list retrieve

--- a/trunk/workspace/MeshStremingiOSClient/MeshStremingiOSClient/ProgMeshModelTableViewController.xib
+++ b/trunk/workspace/MeshStremingiOSClient/MeshStremingiOSClient/ProgMeshModelTableViewController.xib
@@ -33,6 +33,7 @@
 			<object class="IBUITableView" id="873029372">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
+				<array class="NSMutableArray" key="NSSubviews"/>
 				<string key="NSFrame">{{0, 64}, {320, 504}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
@@ -140,7 +141,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">9</int>
+			<int key="maxID">45</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
